--- a/.github/workflows/tests-unit.yml
+++ b/.github/workflows/tests-unit.yml
@@ -11,12 +11,14 @@ jobs:
         uses: actions/checkout@v2
       
       - name: Start containers
-        run: docker-compose -f "docker-compose.yml" up -d
+        run: docker-compose pull
+        run: docker-compose up -d
+        run: bash .wait.sh
         
       - name: Install Node
         uses: actions/setup-node@v2
         with:
-          node-version: 12.x
+          node-version: 16.x
           cache: npm
           cache-dependency-path: package-lock.json
           
@@ -26,11 +28,11 @@ jobs:
       - name: Run NPM unit tests
         run: npm test
         
-      - name: Run Ember Core Tests
-        run: ./node_modules/ember-cli/bin/ember test
+#      - name: Run Ember Core Tests
+#        run: ./node_modules/ember-cli/bin/ember test
         
-      - name: Run Ember Server tests
-        run: ./node_modules/ember-cli/bin/ember test --server
+#      - name: Run Ember Server tests
+#        run: ./node_modules/ember-cli/bin/ember test --server
         
       - name: Stop containers
         if: always()
