--- a/.github/workflows/tests-unit.yml
+++ b/.github/workflows/tests-unit.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install Node
         uses: actions/setup-node@v2
         with:
-          node-version: 8
+          node-version: lts/*
           cache: 'npm'
           cache-dependency-path: package-lock.json
               
